2013-01-10  Marcus Shawcroft  <marcus.shawcroft@linaro.org>

	* libc/machine/aarch64/Makefile.am (lib_a_SOURCES):
	Add strlen.S and strlen-stub.c.
	* libc/machine/aarch64/Makefile.in: Regenerated.
	* libc/machine/aarch64/strlen-stub.c: New file.
	* libc/machine/aarch64/strlen.S: New file.

2013-01-10  Marcus Shawcroft  <marcus.shawcroft@linaro.org>

	* libc/machine/aarch64/Makefile.am (lib_a_SOURCES):
	Add memmove.S and memmove-stub.c.
	* libc/machine/aarch64/Makefile.in: Regenerated.
	* libc/machine/aarch64/memmove-stub.c: New file.
	* libc/machine/aarch64/memmove.S: New file.

2013-01-10  Marcus Shawcroft  <marcus.shawcroft@linaro.org>

	* libc/machine/aarch64/Makefile.am (lib_a_SOURCES): Re-ordered.
	Add strncmp.S and strncmp-stub.c.
	* libc/machine/aarch64/Makefile.in: Regenerated.
	* libc/machine/aarch64/strncmp-stub.c: New file.
	* libc/machine/aarch64/strncmp.S: New file.

2013-01-10  Marcus Shawcroft  <marcus.shawcroft@linaro.org>

	* libc/machine/aarch64/Makefile.am (lib_a_SOURCES): Add
	memcpy.c memcpy-stub.c memset.S memset-stub.c strcmp.S
	strcmp-stub.c.
	* libc/machine/aarch64/Makefile.in: Regenerated.
	* libc/machine/aarch64/memcpy-stub.c: New file.
	* libc/machine/aarch64/memcpy.S: New file.
	* libc/machine/aarch64/memset-stub.c: New file.
	* libc/machine/aarch64/memset.S: New file.
	* libc/machine/aarch64/strcmp.S: New file.
	* libc/machine/aarch64/strcmp-stub.c: New file.

2013-01-08  Jeff Johnston  <jjohnstn@redhat.com>

	* MAINTAINERS: Add Richard Earnshaw as Arm co-maintainer
	and add Richard and Marcus Shawcroft as aarch64 maintainers.

2013-01-07  Steve Ellcey  <sellcey@mips.com>

	* libc/machine/mips/memcpy.S (memcpy): Check if _MIPS_SIM is set.

2012-12-20  Jeff Johnston  <jjohnstn@redhat.com>

        * NEWS: Update with 2.0.0 info.
        * README: Ditto.
        * acinclude.m4: Change version number to 2.0.0.
        * aclocal.m4: Regenerated.
        * configure: Ditto.
        * Makefile.in: Regenerated.